--- a/yolo-v8-main/3_yolo_model_training.ipynb
+++ b/yolo-v8-main/3_yolo_model_training.ipynb
@@ -25,7 +25,25 @@
    "outputs": [],
    "source": [
     "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
+    "drive.mount('/content/gdrive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ln -s /content/gdrive/My\\ Drive/ /mydrive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls /mydrive/yolo-v8-main/yolov8/"
    ]
   },
   {
@@ -40,7 +58,7 @@
     "model = YOLO('yolov8n.pt') \n",
     "\n",
     "# Обучение модели\n",
-    "results = model.train(data='yolo-v8-main/yolo8/data.yaml', epochs=100, imgsz=416)\n"
+    "results = model.train(data='/mydrive/yolo-v8-main/yolov8/data.yaml', epochs=100, imgsz=416)\n"
    ]
   }
  ],
